src/test/ui/generator/not-send-sync.stderr
error[E0277]: `std::cell::Cell<i32>` cannot be shared between threads safely
  --> $DIR/not-send-sync.rs:15:5
   |
LL |     fn assert_send<T: Send>(_: T) {}
   |        -----------    ---- required by this bound in `main::assert_send`
...
LL |     assert_send(|| {
   |     ^^^^^^^^^^^ `std::cell::Cell<i32>` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `std::cell::Cell<i32>`
   = note: required because of the requirements on the impl of `std::marker::Send` for `&std::cell::Cell<i32>`
   = note: required because it appears within the type `[generator@$DIR/not-send-sync.rs:15:17: 19:6 a:&std::cell::Cell<i32> _]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
